# Resource-Manager

./: .gitignore  CMakeLists.txt  README.md
headers/RM/: RM.hpp  error.hpp  resourceManager.hpp
headers/RS/: error.hpp  resourceManager.hpp
source/: error.cpp  resourceManager.cpp
